# paper-mesh

./: Cargo.toml  PaperPlane.doap  README.md  meson.build  meson_options.txt
build-aux/: app.drey.PaperPlane.Devel.json
data/: app.drey.PaperPlane.desktop.in.in  app.drey.PaperPlane.metainfo.xml.in.in
data/resources/: resources.gresource.xml
specs/: roadmap.md
src/: application.rs  main.rs  meson.build  test_helpers.rs  types.rs  utils.rs
src/model/: canned_messages.rs  channel.rs  device.rs  message.rs  message_list.rs  message_store.rs  mod.rs  node.rs  node_list.rs  range_test.rs  telemetry.rs  waypoint.rs  waypoint_list.rs
src/ui/: meson.build  mod.rs  ui-resources.gresource.xml  window.blp  window.rs
src/ui/components/: message_entry.blp  message_entry.rs  mod.rs
src/ui/connect_page/: connect_page.blp  mod.rs
src/ui/session/: add_channel_dialog.blp  add_channel_dialog.rs  content.blp  content.rs  map_view.blp  map_view.rs  message_row.blp  message_row.rs  mod.blp  mod.rs  node_row.blp  node_row.rs  share_channel_dialog.blp  share_channel_dialog.rs  sidebar.blp  sidebar.rs  sidebar_row.blp  sidebar_row.rs
