[package]
name = "paper-mesh"
version = "0.2.0"
authors = ["Paper Plane developers"]
edition = "2021"

[dependencies]
adw = { version = "0.6", package = "libadwaita", features = ["v1_5"] }
anyhow = "1"
async-channel = "2"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.8", package = "gtk4", features = ["gnome_45", "blueprint"] }
locale_config = "0.3"
log = "0.4"
meshtastic = { version = "0.1.8", default-features = false, features = ["serde", "tokio"] }
pretty_env_logger = "0.5"
temp-dir = "0.1"
serialport = "4.9"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shumate = { version = "0.5", package = "libshumate" }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
